--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
   <table cellspacing="3">
     <tr>
-      <td><img src="/images/Bridge.jpg" alt="Profile picture" style="width:300px;height:200px;border:2;"></td>
+      <td><img src="images\bridge.jpg" alt="Profile picture" style="width:300px;height:200px;border:2;"></td>
       <td>
         <h1>Kelvin Wong</h1>
         <p><em>Test Analyst @ <a href="http://www.accesshq.com" target="_blank"><strong>AccessHQ</strong></a></em></p>
@@ -96,7 +96,7 @@
   <table cellspacing="3" >
     <tr>
       <td> <a download href="C:\Users\Kelvin Wong\OneDrive\Documents\Web Development\Profile\AHQ Profile Nov2018_Kelvin Wong.docx"><strong>Download My Profile</strong></a></td>
-      <td> <a href="C:\Users\Kelvin Wong\OneDrive\Documents\Web Development\HTML - Personal Site\Contact.html">
+      <td> <a href="Contact.html">
           <strong>Contact Me</strong></a></td>
     </tr>
   </table>
