--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
   <hr />
   <table cellspacing="3" >
     <tr>
-      <td> <a download href="C:\Users\Kelvin Wong\OneDrive\Documents\Web Development\Profile\AHQ Profile Nov2018_Kelvin Wong.docx"><strong>Download My Profile</strong></a></td>
+      <td> <a download href=""><strong>Download My Profile</strong></a></td>
       <td> <a href="Contact.html">
           <strong>Contact Me</strong></a></td>
     </tr>
