--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
   <table cellspacing="3">
     <tr>
-      <td><img src="images\bridge.jpg" alt="Profile picture" style="width:300px;height:200px;border:2;"></td>
+      <td><img src="images/bridge.jpg" alt="Profile picture" style="width:300px;height:200px;border:2;"></td>
       <td>
         <h1>Kelvin Wong</h1>
         <p><em>Test Analyst @ <a href="http://www.accesshq.com" target="_blank"><strong>AccessHQ</strong></a></em></p>
