--- a/index.html
+++ b/index.html
@@ -3,13 +3,13 @@
 
 <head>
   <meta charset="utf-8">
-  <title>Kelvin's Personal Site</title>
+  <title>Kelvin's Personal CV Site</title>
 </head>
 
 <body>
   <table cellspacing="3">
     <tr>
-      <td><img src="images/bridge.jpg" alt="Profile picture" style="width:300px;height:200px;border:2;"></td>
+      <td><img src="images/bridge.png" alt="Profile picture" style="width:300px;height:200px;border:2;"></td>
       <td>
         <h1>Kelvin Wong</h1>
         <p><em>Test Analyst @ <a href="http://www.accesshq.com" target="_blank"><strong>AccessHQ</strong></a></em></p>
@@ -95,7 +95,7 @@
   <hr />
   <table cellspacing="3" >
     <tr>
-      <td> <a download href=""><strong>Download My Profile</strong></a></td>
+      <td> <a download href="C:\Users\Kelvin Wong\OneDrive\Documents\Web Development\Profile\AHQ Profile Nov2018_Kelvin Wong.docx"><strong>Download My Profile</strong></a></td>
       <td> <a href="Contact.html">
           <strong>Contact Me</strong></a></td>
     </tr>
