--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       <td>
         <h1>Kelvin Wong</h1>
         <p><em>Test Analyst @ <a href="http://www.accesshq.com" target="_blank"><strong>AccessHQ</strong></a></em></p>
-        <P>I have been working in an IT role for many years which began in an IT supporting role and leading up to my present role as a Tester. My journey to a QA Tester started when I was in a project at Transport NSW Jan 2016, his primary
+        <P>I have been working in an IT role for many years which began in an IT supporting role and leading up to my present role as a Tester. My journey to a QA Tester started when I was in a project at Transport NSW in Jan 2016, my primary
           responsibilities involved troubleshooting, smoke testing and resolving of system related issues, and ensure software compatibilities before its release to the production environment. </<p>
           <p>I'm relishing the role of a systems tester which provides him with the opportunity to find defects before the product is released to end users. </p>
           <p>Furthermore, I've had the utmost satisfaction in discovering other areas of system testing through trial and error, including various approached and techniques in detecting of software bugs and other unknown errors. </p>
